--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" appHorizontalScroll>
   <div class="items">
     <div class="item" *ngFor="let item of items">
       {{ item }}
