--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,10 @@
 .container {
   overflow-x: scroll;
+  scrollbar-width: none; // hide scrollbar in Firefox
+
+  &::-webkit-scrollbar {
+    display: none; // hide scrollbar in Chromium
+  }
 
   .items {
     display: flex;
